gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail20772.d
version https://git-lfs.github.com/spec/v1
oid sha256:73f9b2967996126cf144046c9fc7ce974767bd475cefcb6e5659030c9815ab5c
size 449
